# aiida-icon-clm

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE.txt  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
docs/: conf.py  index.rst
examples/: Digraph.gv  Graph Visualization.ipynb  Tour.ipynb  conv2icon_submit.py  gcm2icon_submit.ipynb  icon_submit.py  prep_input.sh  prep_submit.py  quick tests.ipynb
src/aiida_c2sm/: __init__.py  bakery.py  cycle.py  example_flow.py  exceptions.py  skeleton.py
src/aiida_c2sm/spice/: __init__.py  conv2icon.py  data.py  icon.py  icon_wc.py  params.py  prep.py
src/aiida_c2sm/spice/gcm2icon/: __init__.py  workflow.py
src/aiida_c2sm/spice/prepare/: __init__.py  prep_workflow.py
src/aiida_c2sm/spice/scripts/: conv2icon.sh  prep.sh  prep_check.sh
src/aiida_c2sm/spice/scripts/prep/: prep.sh
src/aiida_c2sm/spice/templates/: icon_master.namelist  model_namelists.nml
tests/: conftest.py  test_skeleton.py
